# Rust

Practise/first_axum/: Cargo.toml
Practise/first_axum/src/database/models/: tables.rs
Practise/first_axum/src/response/: responses.rs
Practise/first_axum/src/routes/: error.rs
Practise/first_tokio/: Cargo.toml
Practise/first_tokio/src/: main.rs
Practise/second_tokio/: Cargo.toml
Practise/second_tokio/src/: first_file.rs  main.rs
Projects/basic_calc/src/: actions.rs  input.rs  main.rs
Projects/bookapp/: Cargo.toml
Projects/bookapp/src/: main.rs
Projects/bookapp/src/auth/: mod.rs  password_manager.rs  token.rs
Projects/bookapp/src/config/: argon_config.rs  mod.rs
Projects/bookapp/src/database/models/: mod.rs  tables.rs
Projects/bookapp/src/database/models/table_creation/: mod.rs  user_login.rs  users.rs
Projects/bookapp/src/response/: responses.rs
Projects/bookapp/src/routes/: home.rs  login.rs  mod.rs  users.rs
Projects/play_security/: Cargo.toml  Readme.mdb
Projects/play_security/src/: main.rs
Projects/play_security/src/database/: mod.rs
Projects/play_security/src/middleware/: auth.rs
Projects/play_security/src/routes/: users.rs
